сужен доступ к публичным эндпоинтам